--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -5,8 +5,9 @@
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
+    <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Cindy is a student at Georgian College. Her favourite colour is green and she loves to program in JAVA.</p>
   </body>
   <% include ./partials/footer.ejs %>
 </html>
