--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
     <h1><%= title %></h1>
     <p>I am a computer programming student at Georgian College. Previously, I spent a few years studying at the University of Toronto, majoring in Computer Science & Spanish.</p>
     <p>I have been programming for over 10 years. I am proficient in JAVA, Visual Basic, and C#. I am experienced in C and MySQL and have had some experience in Python.</p>
-    <p>On a more personal note, I have a shih-tzu named Chavo and my favourite colour is green. In my spare time I like to read, watch tv-shows, and play video games.</p>
+    <p>On a more personal note, I have a shih-tzu named Chavo and my favourite colour is green. <br />In my spare time I like to read, watch tv-shows, and play video games.</p>
   </body>
   <% include ./partials/footer.ejs %>
 </html>
