--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -22,7 +22,7 @@
       </div>
       <div>
           <label for="sender_message">Message</label>
-          <textarea name="sender_message" id="sender_message" required />
+          <textarea name="sender_message" id="sender_message" required rows="4" cols="50">Enter your message here.</textarea>
       </div>
     </form>
   </body>
