--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -21,9 +21,9 @@
           <input type="tel" name="sender_phone" id="sender_phone" />
       </div>
       <div>
-          <label for="sender_message">Message</label>
           <textarea name="sender_message" id="sender_message" required rows="4" cols="50">Enter your message here.</textarea>
       </div>
+      <button type="submit">Submit</button>
     </form>
   </body>
   <% include ./partials/footer.ejs %>
