--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <p>Hello, world!<br />My name is Cindy Orbegoso. Welcome to my portfolio!</p>
   </body>
   <% include ./partials/footer.ejs %>
 </html>
