--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,6 @@
+<a href="/">
+  <img src="../../public/images/name.png" width="600 " height="200" alt=""/>
+</a>
 <nav>
   <ul>
     <li><a href="/">Home</a></li>
