still fiddling with image

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,5 +1,5 @@
 <a href="/">
-  <img src="../../public/images/name.png" width="600 " height="200" alt=""/>
+  <img src="../images/name.png" width="600 " height="200" alt=""/>
 </a>
 <nav>
   <ul>
