adding picture of myself

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <% include ./partials/header.ejs %>
-    <h1><%= title %></h1>
+    <img src="/images/self.jpg" width="144 " height="166" alt="Picture of myself"/>
     <p>Hello, world!<br />My name is Cindy Orbegoso. Welcome to my portfolio!</p>
   </body>
   <% include ./partials/footer.ejs %>
