Adding project and services information

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -7,7 +7,9 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
-    <p>Cindy is a student at Georgian College. Her favourite colour is green and she loves to program in JAVA.</p>
+    <h3>Cindy's Number Guessing Game</h3>
+    <img src="/images/numguessinggame.jpg" width="298 " height="181" alt="Picture of the form of Cindy's Number Guessing Game"/>
+    <p>This is a simple number guessing game I created in Visual Basic. The user submits their guess and the game gives them hints until the user guesses correctly.</p>
   </body>
   <% include ./partials/footer.ejs %>
 </html>
