--- a/views/services.ejs
+++ b/views/services.ejs
@@ -7,7 +7,11 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
-    <p>Cindy is a student at Georgian College. Her favourite colour is green and she loves to program in JAVA.</p>
+    <ul>
+      <li>Game Development</li>
+      <li>Mobile Development(Android)</li>
+      <li>Rapid Application Development</li>
+    </ul>
   </body>
   <% include ./partials/footer.ejs %>
 </html>
