Touching up header and footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,6 @@
 <footer>
+  <small>©Cindy Orbegoso All rights reserved.</small>
   <nav>
-    <ul>
-      <li><a href="/">E-mail</a></li>
-      <li><a href="/about">Linkedin</a></li>
-      <li><a href="/projects">GitHub</a></li>
-    </ul>
+    <a href="/">E-mail</a> <a href="/about">Linkedin</a> <a href="/projects">GitHub</a>
   </nav>
 </footer>
