--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,11 +2,5 @@
   <img src="../images/name.png" width="600 " height="200" alt=""/>
 </a>
 <nav>
-  <ul>
-    <li><a href="/">Home</a></li>
-    <li><a href="/about">About Me</a></li>
-    <li><a href="/projects">Projects</a></li>
-    <li><a href="/services">Services</a></li>
-    <li><a href="/contact">Contact Me</a></li>
-  </ul>
+  <a href="/">Home</a> | <a href="/about">About Me</a> | <a href="/projects">Projects</a> | <a href="/services">Services</a> | <a href="/contact">Contact Me</a>
 </nav>
