--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,8 @@
 <footer>
-  <small>©Cindy Orbegoso All rights reserved.</small>
-  <nav>
-    <a href="/">E-mail</a> <a href="/about">Linkedin</a> <a href="/projects">GitHub</a>
-  </nav>
+  <small>
+    ©Cindy Orbegoso All rights reserved.
+    <nav>
+      <a href="/">E-mail</a> <a href="/about">Linkedin</a> <a href="/projects">GitHub</a>
+    </nav>
+  </smal>
 </footer>
