Added link to github

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -8,7 +8,9 @@
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
     <h3>Cindy's Number Guessing Game</h3>
-    <img src="/images/numguessinggame.jpg" width="298 " height="181" alt="Picture of the form of Cindy's Number Guessing Game"/>
+    <a href="https://github.com/Cindy-O/Number-Guessing-Game.git">
+      <img src="/images/numguessinggame.jpg" width="298 " height="181" alt="Picture of the form of Cindy's Number Guessing Game"/>
+    </a>
     <p>This is a simple number guessing game I created in Visual Basic. The user submits their guess and the game gives them hints until the user guesses correctly.</p>
   </body>
   <% include ./partials/footer.ejs %>
