--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,12 @@
+html {
+  background-color: #f1f4e3;
+}
+
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Trebuchet MS", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+  color: #666961;
 }
