--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,8 +2,11 @@ html {
   text-align: center;
 }
 
-body {
+header, body {
   background-color: #f1f4e3;
+}
+
+body {
   padding: 50px;
   font: 14px "Trebuchet MS", Helvetica, Arial, sans-serif;
 }
@@ -22,6 +25,10 @@ a:active {
 }
 
 footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: 666961;
   color: #b3b6aa;
 }
