Footer and css tweaks

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <small>
     ©Cindy Orbegoso All rights reserved.
     <nav>
-      <a href="/">E-mail</a> <a href="/about">Linkedin</a> <a href="/projects">GitHub</a>
+      <a href="/">E-mail</a>, <a href="/about">Linkedin</a>, <a href="/projects">GitHub</a>
     </nav>
-  </smal>
+  </small>
 </footer>
