--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,6 +6,10 @@ header, body {
   background-color: #f1f4e3;
 }
 
+header nav {
+  padding: 10px;
+}
+
 body {
   padding: 50px;
   font: 14px "Trebuchet MS", Helvetica, Arial, sans-serif;
@@ -29,6 +33,6 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: 666961;
+  background-color: #666961;
   color: #b3b6aa;
 }
