--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,8 +1,6 @@
 <footer>
-  <small>
-    ©Cindy Orbegoso All rights reserved.
-    <nav>
-      <a href="/">E-mail</a>, <a href="/about">Linkedin</a>, <a href="/projects">GitHub</a>
-    </nav>
-  </small>
+  <small>©Cindy Orbegoso All rights reserved.</small>
+  <nav>
+    <a href="/">E-mail</a>, <a href="/about">Linkedin</a>, <a href="/projects">GitHub</a>
+  </nav>
 </footer>
