--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -37,11 +37,10 @@ footer nav a:hover{
 }
 
 footer {
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
-  padding: 1em;
   background-color: #666961;
   color: #b3b6aa;
 }
