--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,6 @@
 <a href="/">
   <img src="../images/name.png" width="600 " height="200" alt=""/>
 </a>
-<nav>
+<nav id="headernav">
   <a href="/">Home</a> | <a href="/about">About Me</a> | <a href="/projects">Projects</a> | <a href="/services">Services</a> | <a href="/contact">Contact Me</a>
 </nav>
