--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer>
   <small>©Cindy Orbegoso All rights reserved.</small>
   <nav>
-    <a href="/">E-mail</a>, <a href="/about">Linkedin</a>, <a href="/projects">GitHub</a>
+    <a href="mailto:cindy.orbegoso@yahoo.ca?Subject=Hello">E-mail</a>, <a href="https://ca.linkedin.com/in/cindy-orbegoso-6aa2bba7">Linkedin</a>, <a href="https://github.com/Cindy-O">GitHub</a>
   </nav>
 </footer>
