Added comments all over the place.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,10 @@
+/*
+Filename: style.css
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: Stylesheet for the portfolio website.
+*/
+
 html {
   text-align: center;
 }
