--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,10 @@
+<!--
+Filename: index.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for Home page. This page displays a welcome message.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -6,6 +13,7 @@
   </head>
   <body>
     <% include ./partials/header.ejs %>
+    <!--Welcome text with my picture-->
     <img src="/images/self.jpg" width="144 " height="166" alt="Picture of myself"/>
     <p>Hello, world!<br />My name is Cindy Orbegoso. Welcome to my portfolio!</p>
   </body>
