--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,3 +1,11 @@
+<!--
+Filename: footer.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for a shared footer. This footer is meant to be shared by all of the pages.
+-->
+
+<!--Footer with copyright info and a mailto link and links to linkedin profile and github profile-->
 <footer>
   <small>©Cindy Orbegoso All rights reserved.</small>
   <nav>
