--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,11 @@
+<!--
+Filename: header.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for a header section. This is meant to be a shared header between all of the pages.
+-->
+
+<!--Header with logo on top and navigation menu underneath-->
 <a href="/">
   <img src="../images/name.png" width="600 " height="200" alt=""/>
 </a>
