--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,3 +1,10 @@
+<!--
+Filename: projects.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for Projects page. This page displays my projects.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +14,7 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
+    <!--Brief information and accompanying image regarding my projects-->
     <h3>Cindy's Number Guessing Game</h3>
     <a href="https://github.com/Cindy-O/Number-Guessing-Game.git">
       <img src="/images/numguessinggame.jpg" width="298 " height="181" alt="Picture of the form of Cindy's Number Guessing Game"/>
