--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,3 +1,10 @@
+<!--
+Filename: services.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for Services page. It lists services that I offer.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +14,7 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
+    <!--List of services I offer-->
     <p>
       <ul>
         <li>Game Development</li>
