--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,3 +1,10 @@
+<!--
+Filename: about.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for About page. This page displays brief information about myself.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +14,7 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
+    <!--Brief information about myself-->
     <p>I am a computer programming student at Georgian College. Previously, I spent a few years studying at the University of Toronto, majoring in Computer Science & Spanish.</p>
     <p>I have been programming for over 10 years. I am proficient in JAVA, Visual Basic, and C#. I am experienced in C and MySQL and have had some experience in Python.</p>
     <p>On a more personal note, I have a shih-tzu named Chavo and my favourite colour is green. <br />In my spare time I like to read, watch tv-shows, and play video games.</p>
