--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,10 @@
+<!--
+Filename: contact.ejs
+Author: Cindy Orbegoso
+Website Name: Cindy O. Portfolio
+File Description: HTML for Contact page. This page displays a form where visitors can send me a message.
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +14,7 @@
   <body>
     <% include ./partials/header.ejs %>
     <h1><%= title %></h1>
+    <!--Contact form with fields for name, email, phone number, and message-->
     <form id="contact_form">
       <div>
           <label for="sender_name">Name</label>
